[gd_scene load_steps=23 format=2]

[ext_resource path="res://UserInterface/health.png" type="Texture" id=1]
[ext_resource path="res://UserInterface/main.gd" type="Script" id=2]
[ext_resource path="res://UserInterface/stamina.png" type="Texture" id=3]
[ext_resource path="res://UserInterface/coin.png" type="Texture" id=4]
[ext_resource path="res://UserInterface/Josefin_Sans/Controls.tres" type="Theme" id=5]
[ext_resource path="res://UserInterface/Josefin_Sans/static/JosefinSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UserInterface/Josefin_Sans/Controls2.tres" type="Theme" id=7]
[ext_resource path="res://UserInterface/arrow.png" type="Texture" id=8]
[ext_resource path="res://UserInterface/Main.tres" type="Theme" id=9]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Health:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "pulse"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Health:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 1.1 ),
"transitions": PoolRealArray( 4.00001, 0.31864, 1.8025, 0.258817, 4.00001 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinBorder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WinBorder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Border:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "animate"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2.29739, 4 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WinBorder:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Border:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "win"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WinBorder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "showScores"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Border:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WinBorder:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=9]
size = 29
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

//export var
uniform vec4 flash: hint_color = vec4(1.0);
uniform float modifier: hint_range(0.0, 1.0) = 1;

//Affects all pixels
void fragment(){
	//get only the pixels of the sprite
	vec4 color = texture(TEXTURE, UV);
	//first value is what mixing, second is color (r g b) third is strenght (a)
	color.rgb = mix(color.rgb, flash.rgb, modifier);
	//set color
	COLOR = color;
	
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/flash = Color( 1, 1, 1, 1 )
shader_param/modifier = 1.0

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Stamina" type="TextureRect" parent="."]
margin_top = 32.0
margin_right = 28.0
margin_bottom = 60.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Back" type="ColorRect" parent="Stamina"]
margin_left = 36.0
margin_top = 8.0
margin_right = 244.0
margin_bottom = 24.0
color = Color( 0, 0, 0, 1 )

[node name="Bar" type="ColorRect" parent="Stamina"]
margin_left = 40.0
margin_top = 12.0
margin_right = 40.0
margin_bottom = 18.0
rect_scale = Vector2( 2, 2 )
color = Color( 0, 0.462745, 1, 1 )

[node name="Health" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 0.1
margin_right = -304.0
margin_bottom = -48.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Back" type="ColorRect" parent="Health"]
margin_left = 18.0
margin_top = 4.0
margin_right = 122.0
margin_bottom = 12.0
color = Color( 0, 0, 0, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
anchor_left = -0.4
anchor_top = -0.2
anchor_right = 12.2
anchor_bottom = 1.2
margin_left = 26.4
margin_top = 9.2
margin_right = -175.2
margin_bottom = -9.2
color = Color( 1, 0, 0, 1 )

[node name="BarTween" type="Tween" parent="."]

[node name="LowHealth" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/pulse = SubResource( 1 )

[node name="Map" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.537255 )
margin_left = 496.0
margin_right = 640.0
margin_bottom = 144.0
mouse_filter = 1
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="player" type="ColorRect" parent="Map"]
margin_left = 68.0
margin_top = 68.0
margin_right = 76.0
margin_bottom = 76.0

[node name="Rooms" type="Control" parent="Map"]
modulate = Color( 1, 1, 1, 0.478431 )
margin_right = 144.0
margin_bottom = 144.0

[node name="Border" type="ColorRect" parent="Map"]
margin_right = 144.0
margin_bottom = 4.0
color = Color( 0, 0, 0, 1 )

[node name="Border2" type="ColorRect" parent="Map"]
margin_top = 140.0
margin_right = 144.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 1 )

[node name="Border3" type="ColorRect" parent="Map"]
margin_top = 144.0
margin_right = 144.0
margin_bottom = 148.0
rect_rotation = -89.9999
color = Color( 0, 0, 0, 1 )

[node name="Border4" type="ColorRect" parent="Map"]
margin_left = 140.0
margin_top = 144.0
margin_right = 284.0
margin_bottom = 148.0
rect_rotation = -89.9999
color = Color( 0, 0, 0, 1 )

[node name="Coin" type="TextureRect" parent="."]
margin_left = 601.0
margin_top = 6.0
margin_right = 617.0
margin_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Count" type="Label" parent="Coin"]
modulate = Color( 1, 0.890196, 0, 1 )
margin_left = 17.0
margin_top = 3.0
margin_right = 57.0
margin_bottom = 45.0
theme = ExtResource( 5 )
text = "09

"

[node name="Border" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 640.0
margin_bottom = 640.0
mouse_filter = 1
color = Color( 1, 0, 0, 1 )

[node name="Back" type="ColorRect" parent="Border"]
margin_left = 32.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 608.0
mouse_filter = 1
color = Color( 0.592157, 0, 0, 0.537255 )

[node name="GAMEOVER" type="Label" parent="Border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -152.0
margin_right = 128.0
margin_bottom = -96.0
theme = SubResource( 4 )
text = "GAME OVER"
align = 1
valign = 1

[node name="taunt" type="Label" parent="Border"]
margin_left = 176.0
margin_top = 216.0
margin_right = 464.0
margin_bottom = 312.0
theme = SubResource( 6 )
text = "Taunt Message"
align = 1
valign = 1
autowrap = true

[node name="Restart" type="Button" parent="Border"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 224.0
margin_top = 320.0
margin_right = 416.0
margin_bottom = 368.0
theme = ExtResource( 7 )
text = "Restart?"
flat = true

[node name="ColorRect" type="ColorRect" parent="Border/Restart"]
show_behind_parent = true
margin_right = 192.0
margin_bottom = 48.0
mouse_filter = 1
color = Color( 0.478431, 0, 0, 1 )

[node name="MM" type="Button" parent="Border"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 224.0
margin_top = 384.0
margin_right = 416.0
margin_bottom = 432.0
theme = ExtResource( 7 )
text = "Main Menu?"
flat = true

[node name="ColorRect" type="ColorRect" parent="Border/MM"]
modulate = Color( 0.478431, 0, 0, 1 )
show_behind_parent = true
margin_right = 192.0
margin_bottom = 48.0
mouse_filter = 1

[node name="Arrow" type="TextureRect" parent="Border"]
margin_left = 224.0
margin_top = 328.0
margin_right = 256.0
margin_bottom = 360.0
rect_rotation = 89.9999
texture = ExtResource( 8 )

[node name="GameOver" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 8 )
anims/animate = SubResource( 7 )
anims/win = SubResource( 11 )

[node name="WinBorder" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 640.0
margin_bottom = 640.0
mouse_filter = 1
color = Color( 0.0784314, 0.00784314, 0.196078, 1 )

[node name="Back" type="ColorRect" parent="WinBorder"]
margin_left = 32.0
margin_top = 32.0
margin_right = 600.0
margin_bottom = 608.0
mouse_filter = 1
color = Color( 0.2, 0, 0.254902, 1 )

[node name="Label" type="Label" parent="WinBorder"]
margin_left = 160.0
margin_top = 72.0
margin_right = 480.0
margin_bottom = 120.0
mouse_filter = 1
theme = SubResource( 10 )
text = "Escape Successful! "
align = 1
valign = 1

[node name="ScoreBox" type="ColorRect" parent="WinBorder"]
margin_left = 160.0
margin_top = 120.0
margin_right = 480.0
margin_bottom = 432.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.466667 )

[node name="ScoreTypes" type="Label" parent="WinBorder"]
margin_left = 176.0
margin_top = 144.0
margin_right = 428.0
margin_bottom = 416.0
mouse_filter = 1
theme = ExtResource( 9 )
text = "Coins Collected :

Enemies Defeated :

Health Bonus :

Dungeon Size :

Difficulty Multiplier :
------------------------------------------
Total :"

[node name="scores" type="Label" parent="WinBorder"]
margin_left = 376.0
margin_top = 144.0
margin_right = 472.0
margin_bottom = 416.0
mouse_filter = 1
theme = ExtResource( 9 )
text = "1

2

3

1

10

100"
align = 1

[node name="Restart2" type="Button" parent="WinBorder"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 224.0
margin_top = 448.0
margin_right = 416.0
margin_bottom = 496.0
theme = ExtResource( 7 )
text = "Restart?"
flat = true

[node name="ColorRect" type="ColorRect" parent="WinBorder/Restart2"]
show_behind_parent = true
margin_right = 192.0
margin_bottom = 48.0
mouse_filter = 1
color = Color( 0.760784, 0.231373, 1, 1 )

[node name="MM" type="Button" parent="WinBorder"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 224.0
margin_top = 512.0
margin_right = 416.0
margin_bottom = 560.0
theme = ExtResource( 7 )
text = "Main Menu?"
flat = true

[node name="ColorRect" type="ColorRect" parent="WinBorder/MM"]
show_behind_parent = true
margin_right = 192.0
margin_bottom = 48.0
mouse_filter = 1
color = Color( 0.760784, 0.231373, 1, 1 )

[node name="Arrow" type="TextureRect" parent="WinBorder"]
material = SubResource( 13 )
margin_left = 224.0
margin_top = 456.0
margin_right = 256.0
margin_bottom = 488.0
rect_rotation = 89.9999
texture = ExtResource( 8 )

[connection signal="mouse_entered" from="Border/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="Border/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Border/MM" to="." method="_on_MM_mouse_entered"]
[connection signal="pressed" from="Border/MM" to="." method="_on_MM_pressed"]
[connection signal="mouse_entered" from="WinBorder/Restart2" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="WinBorder/Restart2" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="WinBorder/MM" to="." method="_on_MM_mouse_entered"]
[connection signal="pressed" from="WinBorder/MM" to="." method="_on_MM_pressed"]
